--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the index controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+h1.doodle {
+	text-align:center;
+	}
+
+div.footer {
+	position:absolute;
+	bottom:0;
+	text-align:center;
+	}
+
+div.query {
+	text-align:center;
+	}
+
+input {
+	font-size:18px;	
+	}
