--- a/app/views/index/results.html.erb
+++ b/app/views/index/results.html.erb
@@ -1,3 +1,8 @@
 <h4> <a href='/'>Search again </a></h4>
 <h1> Results </h1>
 <div> Your home university is: <b><%= @home.name%> </b>; Your host university is <b> <%= @host.name%> </b>; Your department is <b> <%=@dept.name%> </b> </div>
+<table>
+	<tbody>
+		<%= @homeco %>
+	</tbody>
+</table>
